--- a/index.html
+++ b/index.html
@@ -1,49 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 7 Lab 2</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .main-content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin-top: 10vh; 
-        }
-        footer {
-            text-align: center;
-            margin-top: auto;
-        }
-    </style>
-</head>
-<body class="d-flex flex-column min-vh-100">
+<main class="main-content text-center w-100">
+    <h1>Welcome to Cassandra's Bootstrap Practice</h1>
 
-    <header class="container full-height d-flex flex-column justify-content-center align-items-center">
-        <div class="border border-primary p-3 w-100 text-center">
-            <p class="text-muted">This is some text with a border and padding.</p>
-        </div>
-    </header>
+    <div class="d-flex justify-content-center">
+        <a href="index.html" class="btn btn-primary m-2">Home</a>
+        <a href="about.html" class="btn btn-primary m-2">About</a>
+        <a href="gallery.html" class="btn btn-primary m-2">Gallery</a>
+        <a href="holidays.html" class="btn btn-primary m-2">Holidays</a>
+    </div>
 
-    <main class="main-content text-center w-100">
-        <h1>Welcome to Cassandra's Bootstrap Practice</h1>
-        <p>This is My Simple Bootstrap Project Practice</p>
-        <div class="d-flex justify-content-center">
-            <button class="btn btn-primary m-2">Button 1</button>
-            <button class="btn btn-primary m-2">Button 2</button>
-            <button class="btn btn-primary m-2">Button 3</button>
-        </div>
-    </main>
-        
-    <footer class="mt-auto text-center">
-        <p>&copy; 2025 Cassandra Moore</p>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+    <div class="container mt-5">
+        <div class="row justify-content-center"></div>
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item list-group-item-success">Success Item</li>
+            <li class="list-group-item list-group-item-secondary">Secondary Item</li>
+            <li class="list-group-item list-group-item-info">Information Item</li>
+            <li class="list-group-item list-group-item-warning">Warning Item</li>
+        </ul>
+    </div>
+</main>
