Add picture to about page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
         <div class="d-flex justify-content-center align-items-center"></div>
         <div class="card" style="width: 32rem;">
-            <img src="Cassandra pic.jpg" class="card-img-top" alt="...">
+            <img src="./Cassandra pic.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">About Me</h5>
               <p class="card-text">I'm Cassandra,</p>
